[project]
name = "claude-code-sdk-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.5",
    "claude-code-sdk>=0.0.22",
    "devtools>=0.12.2",
    "loguru>=0.7.3",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.1.1",
    "rich>=13.0.0",
]

[tool.pyright]
reportAttributeAccessIssue = false
reportUnknownMemberType = false
